--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "nprogress": "^0.2.0",
+    "qiniu-js": "^2.5.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
