--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jiker/markdown-it": "^1.1.4",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
@@ -16,6 +17,7 @@
     "qiniu-js": "^2.5.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
