--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "moment": "^2.26.0",
     "nprogress": "^0.2.0",
     "qiniu-js": "^2.5.5",
